# whitelight

./: .env.example  .gitignore  CRYPTO-BACKTEST-RESULTS.md  CRYPTO-EXPANSION.md  Makefile  PRD.md  README.md  White_Light_PRD.md  pyproject.toml
config/: aws.yaml  default.yaml  local.yaml  paper.yaml
data/: strategies.db
data/cache/: ndx_daily.parquet  qqq_daily.parquet  sqqq_daily.parquet  tqqq_daily.parquet
data/monte_carlo/: dca_projection.json  mc_production_20260222_231704.json  mc_v2_latest.json  production_allocations.parquet
data/research/: all_regime_results.json  regime_bear_2022.json  regime_bull_recovery.json  regime_covid_crash_recovery.json  regime_full_cycle.json  regime_whitelight_period.json  strategy_improvement_analysis.md  v1_vs_v2_real.json  v2_analysis.md  whitelight_v2_equity_curves.json  whitelight_v2_results.json
docs/: earnings-events-strategy.md
scripts/: backtest.py  crypto_runner.py  grid_search.py  grid_search_results.csv  monte_carlo_production.py  monte_carlo_v2.py  regime_comparison.py  research_pipeline.py  run.sh  seed_cache.py  v2_proper_backtest.py  validate_cache.py  whitelight_v2_backtest.py
src/whitelight/: __init__.py  __main__.py  config.py  constants.py  logging_config.py  main.py  models.py
src/whitelight/backtest/: __init__.py  metrics.py  runner.py
src/whitelight/crypto/: __init__.py  data.py  executor.py  market_cipher.py  market_cipher_v2.py  runner.py  strategy.py
src/whitelight/data/: __init__.py  cache.py  sync.py  (+4 more)
tests/: conftest.py
tests/backtest/: test_backtest.py
tests/unit/: test_config.py
(+44 files in other folders)
