[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitelight"
version = "0.1.0"
description = "Automated position-trading engine for TQQQ/SQQQ"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "alpaca-py>=0.21",
    "ib-async>=1.0",
    "polygon-api-client>=1.12",
    "httpx>=0.26",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "exchange-calendars>=4.5",
    "structlog>=23.2",
    "tenacity>=8.2",
    "boto3>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
    "pandas-stubs>=2.1",
]

[project.scripts]
whitelight = "whitelight.main:cli_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/whitelight"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
